--- a/package.json
+++ b/package.json
@@ -21,20 +21,21 @@
     "grunt-contrib-watch": "~0.6.0",
     "grunt-traceur-simple": "~0.9.4",
     "matchdep": "~0.3.0",
-    "gulp": "^3.6.1",
-    "gulp-traceur": "^0.4.0",
-    "connect-livereload": "^0.4.0",
+
     "connect": "^2.14.4",
-    "gulp-load-plugins": "^0.5.0",
-    "opn": "^0.1.1",
-    "gulp-livereload": "^1.3.1",
-    "gulp-csslint": "^0.1.4",
-    "gulp-jshint": "^1.5.3",
-    "jshint-stylish": "^0.1.5",
+    "connect-livereload": "^0.4.0",
+    "gulp": "^3.6.1",
     "gulp-clean": "^0.2.4",
     "gulp-concat": "^2.2.0",
+    "gulp-csslint": "^0.1.4",
     "gulp-filter": "^0.4.1",
+    "gulp-insert": "^0.3.0",
+    "gulp-jshint": "^1.5.3",
+    "gulp-livereload": "^1.3.1",
+    "gulp-load-plugins": "^0.5.0",
     "gulp-order": "^1.0.6",
-    "gulp-insert": "^0.3.0"
+    "gulp-traceur": "^0.4.0",
+    "jshint-stylish": "^0.1.5",
+    "opn": "^0.1.1"
   }
 }
