--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "todo-es6",
   "version": "0.0.0",
   "description": "todo application using AngularJS and ES6",
-  "repository": {"type": "git", "url": "https://github.com/mvolkmann/todo-es6.git"},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mvolkmann/todo-es6.git"
+  },
   "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,17 +17,15 @@
   "author": "R. Mark Volkmann",
   "license": "MIT",
   "devDependencies": {
+    "connect": "^2.14.4",
+    "connect-livereload": "^0.4.0",
     "grunt": "~0.4.4",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-csslint": "~0.2.0",
     "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-csslint": "~0.2.0",
     "grunt-contrib-jshint": "~0.9.2",
     "grunt-contrib-watch": "~0.6.0",
     "grunt-traceur-simple": "~0.9.4",
-    "matchdep": "~0.3.0",
-
-    "connect": "^2.14.4",
-    "connect-livereload": "^0.4.0",
     "gulp": "^3.6.1",
     "gulp-clean": "^0.2.4",
     "gulp-concat": "^2.2.0",
@@ -36,7 +37,9 @@
     "gulp-load-plugins": "^0.5.0",
     "gulp-order": "^1.0.6",
     "gulp-traceur": "^0.4.0",
+    "gulp-uglify": "^1.1.0",
     "jshint-stylish": "^0.1.5",
+    "matchdep": "~0.3.0",
     "opn": "^0.1.1"
   }
 }
